<resources>
    <string name="app_name">StreamingSite</string>
    <string name="login">Iniciar sesión</string>
    <string name="signIn">¿Todavía sin Nitflex? Regístrate ya.</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirmpass">Confirmar contraseña</string>
    <string name="Registrar">Registrarse</string>
    <string name="forgot">¿Has olvidado tu contraseña?</string>
    <string name="ayuda">¿Necesitas ayuda?</string>
    <string name="desc">.</string>
    <string name="series">Series</string>
    <string name="pelis">Peliculas</string>
    <string name="cate">Categorías</string>
    <string name="title" translatable="false">Título Genérico de Pelicula</string>
    <string name="apar0">Popular</string>
    <string name="apar1">Explorar</string>
    <string name="apar2">Últimas novedades</string>
    <string name="apar3">Originales</string>
    <string name="apar4">Recomendaciones</string>
    <string name="user">Nombre Usuario</string>
    <string name="changepass">Cambiar contraseña</string>
    <string name="sesion">Cerrar sesión</string>
    <string name ="sinopsis">Sinopsis</string>
    <string name ="titulo">Título</string>
    <string name ="estreno">Estreno</string>
    <string name ="puntaje">Puntuación</string>
    <string name="generos">Géneros</string>
    <string-array name="Cat">
        <item>Categorías</item>
        <item>Acción</item>
        <item>Aventuras</item>
        <item>Ciencia Ficción</item>
        <item>Comedia</item>
        <item>Fantasía</item>
        <item>Romance</item>
    </string-array>
    <string name="mail">Correo Usuario</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="edit">Editar perfil</string>
</resources>