<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:scaleType="center"
        android:src="@drawable/fondologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sombrita" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo2"
            android:contentDescription="@string/desc"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="40dp"
            android:background="#CCFFFFFF"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintTextColor="#1d1b20">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:paddingBottom="12dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textColor="@color/material_on_background_emphasis_high_type"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="#CCFFFFFF"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintTextColor="#1d1b20"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/material_on_background_emphasis_high_type"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#CCFFFFFF"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:iconTint="@color/white"
            app:strokeColor="@color/white" />

        <TextView
            android:id="@+id/btnSignIn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />



        <TextView
            android:id="@+id/btnForgot"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>