<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".Perfil">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/MyTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"

                    android:text="@string/user" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:clickable="true"
                    android:contentDescription="@string/desc"
                    android:focusable="true"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/baseline_home_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/perfilicon"
                app:shapeAppearanceOverlay="@style/Circulito" />
            <TextView
                android:id="@+id/textView4"
                style="@style/MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/textView5"
                style="@style/MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/password" />

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="311dp"
                android:layout_gravity="center"
                android:background="@drawable/borde"
                android:orientation="vertical"
                android:paddingBottom="0dp">

                <Button
                    android:id="@+id/button6"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="#CCFFFFFF"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/edit"
                    android:textColor="@color/material_on_background_emphasis_high_type"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:iconTint="@color/white"
                    app:strokeColor="@color/white" />

                <Button
                    android:id="@+id/button3"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"

                    android:layout_marginEnd="40dp"
                    android:backgroundTint="#CCFFFFFF"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/changepass"
                    android:textColor="@color/material_on_background_emphasis_high_type"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:iconTint="@color/white"
                    app:strokeColor="@color/white" />

                <Button
                    android:id="@+id/button4"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="#CCFFFFFF"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/idioma"
                    android:textColor="@color/material_on_background_emphasis_high_type"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:iconTint="@color/white"
                    app:strokeColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/button5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#CCFFFFFF"
                android:fontFamily="@font/montserrat"
                android:text="@string/sesion"
                android:textColor="@color/material_on_background_emphasis_high_type"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:iconTint="@color/white"
                app:strokeColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/user" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:src="@drawable/perfilicon"
            app:shapeAppearanceOverlay="@style/Circulito" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mail" />

        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit" />


        <Button
            android:id="@+id/button3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#CCFFFFFF"
            android:fontFamily="@font/montserrat"
            android:text="@string/changepass"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:iconTint="@color/white"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/button4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#CCFFFFFF"
            android:fontFamily="@font/montserrat"
            android:text="@string/idioma"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:iconTint="@color/white"
            app:strokeColor="@color/white" />


        <Button
            android:id="@+id/button5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#CCFFFFFF"
            android:fontFamily="@font/montserrat"
            android:text="@string/sesion"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:iconTint="@color/white"
            app:strokeColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>